fix: Make image 100% wide for Image block on mobile

--- a/scss/components/_image-block.scss
+++ b/scss/components/_image-block.scss
@@ -21,7 +21,10 @@
   padding-right: 0;
 
   img {
-    width: 50%;
+    width: 100%;
+    @include media-breakpoint-up(sm) {
+      width: 50%;
+    }
     display: block;
     margin: 0 auto;
   }
